--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Lyle (Unofficial) Xtensa ISA Assembler"
 homepage = "https://github.com/hiljusti/lyle"
 version = "0.1.0"
 edition = "2021"
-license = "bsd3"
+license = "BSD-3-Clause"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
