--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ license = "BSD-3-Clause"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bit-struct = "0.1.31"
+oak = "0.8"
+oak_runtime = "0.6"
